# website

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  index.html  package-lock.json  protect_wrap.sh  pyproject.toml  requirements.txt
articles/blog/: I-have-a-plan.md  beauty-of-repair.md  odysseus.md  template.html
articles/projects/: pos.md
blog/: index.html  main.html  over-complication.html
blog/I-have-a-plan/: index.html
blog/articles/: I-have-a-plan.md  beauty-of-repair.md  template.html  update.md
blog/beauty-of-repair/: index.html
blog/over-complication/: index.html
blog/update/: index.html
cgi-bin/: milli-t.py
css/: style.css
projects/: index.html
projects/articles/: pos.md
projects/pos/: index.html
public/: .htaccess  index.html
public/blog/: index.html
public/blog/I-have-a-plan/: index.html
public/blog/beauty-of-repair/: index.html
public/blog/over-complication/: index.html
public/blog/update/: index.html
public/cgi-bin/: http_lib.py  milli-t.py  newsletter  newsletter.py  newsletter_submit_answer.py  newsletter_submit_question.py  newsletter_unlock.py  skel_lib.py  skels.py  status_template.html  utils.py  wrap.py
public/cgi-bin/templates/skel/: template.html
public/css/: style.css
public/projects/: index.html
public/projects/pos/: index.html
public/projects/skel/: index.html
src/: index.ts
