[project]
name = "website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pillow>=10.4.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "urllib3>=2.2.3",
]

[dependency-groups]
dev = [
    "neovim>=0.3.1",
    "pre-commit>=3.5.0",
    "ruff>=0.14.14",
]
